app bar doesnt fill the screen on mobile fix #1

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
 }
 
 #root {
+  margin: 0;
   min-height: 100vh;
 }
 
